# Velocity

./: .gitignore  Opiuminstaller.sh  README.md  install.sh  package.json  uninstall.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  popover.json
src-tauri/icons/: app.icns
src-tauri/src/: app.rs  cookies.rs  error.rs  icon_theme.rs  main.rs  paths.rs  state.rs  types.rs
src-tauri/src/commands/: accounts.rs  archive.rs  auth.rs  datatree.rs  executor.rs  file_system.rs  icon_theme.rs  io.rs  mod.rs  multi_instance.rs  network.rs  persistence.rs  scripts.rs  search.rs  seed.rs  update.rs  window.rs
src-tauri/src/managers/: client_bridge.rs  mod.rs
src-tauri/src/managers/account/: cookie.rs  mod.rs  roblox_client.rs
src-tauri/src/managers/auth/: mod.rs
src-tauri/src/managers/executor/: extension.rs  hydrogen.rs  mod.rs  opiumware.rs
src-tauri/src/managers/file_system/: mod.rs  tree.rs  watcher.rs
src-tauri/src/managers/icon_theme/: mod.rs
src-tauri/src/managers/instance/: mod.rs
src-tauri/src/managers/multi_instance/: mod.rs
src-tauri/src/managers/network/: mod.rs
src-tauri/src/managers/persistence/: global.rs  mod.rs  workspace.rs
src-tauri/src/managers/script/: mod.rs
src-tauri/src/managers/search/: mod.rs
src-tauri/src/managers/update/: mod.rs
src-tauri/src/models/: account.rs  auth.rs  executor.rs  file_system.rs  mod.rs  multi_instance.rs  persistence.rs  script.rs  search.rs  tree.rs  update.rs
src-tauri/src/services/: mod.rs  multi_instance.rs  persistence.rs  search.rs  tree.rs
(+90 files in other folders)
